k8s/overlays/demo/web-deployment-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
spec:
  template:
    spec:
      containers:
      - name: django
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
