k8s/overlays/demo/web-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
spec:
  template:
    spec:
      containers:
      - name: django
        volumeMounts:
        - name: cache
          mountPath: /home/appuser/.cache
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: cache
        emptyDir: {}
      - name: tmp
        emptyDir: {}
