k8s/overlays/demo/web-image-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
spec:
  template:
    spec:
      containers:
      - name: django
        image: ghcr.io/hatchertechnology/opendismissal:latest
